# volleyball-play-no-play-model

./: .gitignore  README.md  TODO.md  augmentations.py  coiled-requirements.txt  coiled_job.py  export_onnx.py  export_onnx_video_mae.py  export_pose_onnx.py  export_predictions.py  generate_predictions.py  infer.py  infer_onnx.py  process_video_onnx.py  pyproject.toml  smooth_predictions.py  train.py  utils.py
.claude/: settings.local.json
.claude/skills/python-lint-check/: SKILL.md
action_detector/: common.py  label_images.py  label_with_poses.py  models.py  prompts.py  view_labels.py
docs/plans/: 2026-01-04-coiled-lambda-pipeline-design.md
infra/: README.md  app.py  stack.py
infra/lambda/: handler.py
pose_detector/: __init__.py  detect.py  models.py  visualize.py
scripts/: balltime_crawler.py  common.py  extract_action_times_from_balltime.js  extract_noplay_clips.py  extract_rally_times_from_balltime.js  extract_screenshots.py  extract_screenshots_from_video.py  extract_training_clips.py  lint.sh  process_video.py  split_validation.py  video_player.sh  visualize_video.py
